<resources>
    <string name="app_name">FirebaseChallenge</string>
    <string name="exit">Exit</string>
    <string name="create_blog">Create Blog</string>
    <string name="firebase_blogspot">Firebase Blogspot</string>
    <string name="view_blogs">View Blogs</string>
    <string name="icon">icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="new_category">New Category</string>
    <string name="post">Post</string>
    <string name="add_category">Add Category</string>
</resources>
