<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fire" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/firebase_blogspot"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="249dp"
            android:layout_height="45dp"
            android:autofillHints="Title"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Spinner
            android:id="@+id/spinCateg"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/title_edit"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/desc_edit"
            android:layout_width="0dp"
            android:layout_height="507dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit" />

        <Button
            android:id="@+id/post_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_edit"
            app:layout_constraintVertical_bias="0.507" />

        <Button
            android:id="@+id/addCateg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/add_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>